<resources>
    <string name="app_name">CRUDLite</string>
    <string name="create_user">Create User</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
