<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstNameUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/lastNameUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/emailUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/userUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:onClick="update"/>

    <Button
        android:id="@+id/userDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="delete"/>

    <Button
        android:id="@+id/userCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"/>

</LinearLayout>